--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+iamroot-10차 linux kernel x86 분석자료입니다.
+
         Linux kernel release 3.x <http://kernel.org/>
 
 These are the release notes for Linux version 3.  Read them carefully,
